# caddy

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  LICENSE  Procfile  README.md  geocoder.py  gunicorn.py  manage.py  pyproject.toml  requirements.txt  run_geocoder.sh  tests.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-publish.yml  image-build-scan.yml  multi-build.yaml  run-tests.yml  secret-scan.yml
.s2i/: environment
caddy/: api.py  settings.py  urls.py  utils.py  wsgi.py
caddy/templates/: index.html
caddy/templates/search/indexes/stack/: cadastre_geocode_json.txt  cadastre_text.txt
cddp/: apps.py  models.py  router.py
kustomize/: README.md
kustomize/base/: deployment.yaml  deployment_hpa.yaml  service.yaml
kustomize/overlays/prod/: cronjob_import.yaml  deployment_hpa_patch.yaml  deployment_patch.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  service_patch.yaml
kustomize/overlays/uat/: deployment_hpa_patch.yaml  deployment_patch.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  service_patch.yaml
shack/: admin.py  api.py  models.py  tests.py  utils.py
shack/management/commands/: copy_cadastre.py  harvest_addresses.py  harvest_cadastre.py  harvest_cadastre_wfs.py  import_cpt_cadastre_scdb.py  prune_addresses.py
shack/migrations/: 0001_initial.py  0002_add_tsvector_column.py  0002_address_envelope.py  0003_add_search_index_gin_index.py  0003_add_tsv_update_trigger.py  0003_auto_20150902_0214.py  0004_auto_20150902_0222.py  0004_auto_20180523_1040.py  0005_add_tsvector_column.py  0005_address_owner.py  0006_auto_20190507_1045.py  0007_alter_address_data.py  0008_auto_20210630_1137.py  0009_auto_20210701_0919.py  0010_address_boundary.py
shack/templates/shack/: address_text.txt
stack/: api.py  models.py  search_indexes.py  utils.py
stack/management/commands/: harvest_cadastre.py
stack/migrations/: 0001_initial.py
