[project]
name = "caddy"
version = "2.3.18"
description = "Lightweight application service to harvest and index the cadastre dataset, and expose an API endpoint to allow full-text searching of addresses."
authors = [{ name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" }]
license = "Apache-2.0"
requires-python = ">=3.13,<4.0"
dependencies = [
  "django==5.2.9",
  "psycopg[binary,pool]==3.3.2",
  "python-dotenv==1.2.1",
  "dj-database-url==3.1.0",
  "django-extensions==4.1",
  "requests==2.32.5",
  "gunicorn==24.1.1",
  "fudgeo==1.5.0",
  "azure-storage-blob==12.28.0",
  "orjson==3.11.5",
  "whitenoise[brotli]==6.11.0",
]

[dependency-groups]
dev = ["ipython>=9.9.0", "ipdb>=0.13.13", "mixer>=7.2.2", "pre-commit>=4.5.1"]

# Reference: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "E722", # Bare except
]

# Reference: https://www.djlint.com/docs/configuration/
[tool.djlint]
profile = "django"
